skapat en viewmodel för inloggningen

--- a/Systemet/Views/Grupp/gruppsida.cshtml
+++ b/Systemet/Views/Grupp/gruppsida.cshtml
@@ -62,8 +62,6 @@
         </div>
     </div>
 
-
-
                 <div class="well-lg" style="background-color:#eee">
                     <div class="container-fluid">
                         <input type="submit" value="Alla evenemang" class="btn btn-lg btn-danger" id="gruppknapp" style="font-size:x-large; cursor: default" />
@@ -116,14 +114,12 @@
                                     </button>
                                 }
                             </div>
-
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     &nbsp;
                 </div>
-
 
                 @*här börjar uppgiftsindelningen*@
                 <div class="well-lg" style="background-color:#e0e0e0">
@@ -140,99 +136,122 @@
                                             <th>Beskrivning</th>
                                             <th>Uppgift</th>
                                             <th>Ansvarig</th>
+                                            @{ var lista = Model.Item3.Where(m => m.Utförd == true).ToList();}
+                                            @if (Convert.ToInt32(Session["AnvändarID"]) == Model.Item1.LedareID && lista.Count() != 0)
+                                            {
+                                                <th>Ta bort</th>
+                                            }                                           
                                         </tr>
                                     </thead>
 
                                     @foreach (var ev in Model.Item3)
                                     {
-                                        <tbody>
-                                            <tr class="table">
+                                        if (ev.bortplockad == false)
+                                        {
+                                            <tbody>
+                                                <tr class="table">
+                                                    <td class="agenda-date active" style="background-color:#e0e0e0" rowspan="@Model.Item2.Count()">
+                                                        <div class="dayofmonth">@ev.Slutdatum.Day/@ev.Slutdatum.Month</div>
+                                                        <div class="dayofweek">@ev.Slutdatum.DayOfWeek</div>
+                                                        <div class="shortdate text-muted">@ev.Slutdatum.Year</div>
+                                                    </td>
+                                                    <td class="agenda-time" style="background-color:#e0e0e0">
+                                                        @ev.Beskrivning
+                                                    </td>
+                                                    <td class="agenda-events" style="background-color:#e0e0e0">
+                                                        <div class="agenda-event">
 
-                                                <td class="agenda-date active" style="background-color:#e0e0e0" rowspan="@Model.Item2.Count()">
-                                                    <div class="dayofmonth">@ev.Slutdatum.Day/@ev.Slutdatum.Month</div>
-                                                    <div class="dayofweek">@ev.Slutdatum.DayOfWeek</div>
-                                                    <div class="shortdate text-muted">@ev.Slutdatum.Year</div>
-                                                </td>
-
-                                                <td class="agenda-time" style="background-color:#e0e0e0">
-                                                    @ev.Beskrivning
-                                                </td>
-
-                                                <td class="agenda-events" style="background-color:#e0e0e0">
-                                                    <div class="agenda-event">
-
-                                                        @*ingen ansvarig*@
-                                                        @if (ev.Ansvarig == null)
-                                                        {
-                                                            <button class="btn btn-primary" type="button" style="background-color:#9d4040" id="edit"
-                                                                    onclick="location.href='@Url.Action("UppgiftsSida", "uppgifter", new { idet  = ev.UppgifterID })'" title="@ev.UppgifterID">
-                                                                @ev.Namn <span class="badge">ej tagen</span>
-                                                            </button>
-                                                        }
-                                                        @*inloggad är ansvarig*@
-                                                        else if (ev.Ansvarig != null && ev.Ansvarig.AnvändarID == Convert.ToInt32(Session["AnvändarID"]))
-                                                        {
-                                                            if (ev.Påbörjad == true && ev.Utförd == false)
+                                                            @*ingen ansvarig*@
+                                                            @if (ev.Ansvarig == null)
                                                             {
-                                                               // här ska den skicka till ett ställe där man kan avsluta uppgiften
-                                                                <button class="btn btn-primary" type="button" style="background-color:#d46666" id="edit"
-                                                                        onclick="location.href='@Url.Action("Edit", "uppgifter", new { id  = ev.UppgifterID, gruppnamn = Model.Item1.GruppNamn})'" title="@ev.UppgifterID">
-                                                                    @ev.Namn <span class="badge">Påbörjad</span>
-                                                                </button>
-                                                            }
-                                                            else if (ev.Påbörjad == false && ev.Utförd == false)
-                                                            {
-                                                                <button class="btn btn-primary" type="button" style="background-color:#c75151" id="edit"
-                                                                        onclick="location.href='@Url.Action("Edit", "uppgifter", new { id  = ev.UppgifterID, gruppnamn = Model.Item1.GruppNamn })'" title="@ev.UppgifterID">
-                                                                    @ev.Namn <span class="badge">ej påbörjad</span>
-                                                                </button>
-                                                            }
-                                                            else if (ev.Utförd == true && ev.Påbörjad == true)
-                                                            {
-                                                                <button class="btn btn-primary" type="button" style="background-color:#ff8a8a; cursor: default">
-                                                                    @ev.Namn <span class="badge">Klar</span>
+                                                                <button class="btn btn-primary" type="button" style="background-color:#9d4040" id="edit"
+                                                                        onclick="location.href='@Url.Action("UppgiftsSida", "uppgifter", new { idet = ev.UppgifterID })'" title="@ev.UppgifterID">
+                                                                    @ev.Namn <span class="badge">ej tagen</span>
                                                                 </button>
                                                             }
 
-                                                        }
-                                                        else if (ev.Ansvarig != null && ev.Ansvarig.AnvändarID != Convert.ToInt32(Session["AnvändarID"]))
-                                                        {
-                                                            if (ev.Påbörjad == true && ev.Utförd == false)
+                                                            @*inloggad är ansvarig*@
+                                                            else if (ev.Ansvarig != null && ev.Ansvarig.AnvändarID == Convert.ToInt32(Session["AnvändarID"]))
                                                             {
-                                                                <button class="btn btn-primary" type="button" style="background-color:#d46666; cursor: default" id="edit">
-                                                                    @ev.Namn <span class="badge">Påbörjad</span>
-                                                                </button>
-                                                            }
-                                                            else if (ev.Påbörjad == false && ev.Utförd == false)
-                                                            {
-                                                                <button class="btn btn-primary" type="button" style="background-color:#c75151; cursor: default" id="edit">
-                                                                    @ev.Namn <span class="badge">ej påbörjad</span>
-                                                                </button>
-                                                            }
-                                                            else if (ev.Utförd == true && ev.Påbörjad == true)
-                                                            {
-                                                                <button class="btn btn-primary" type="button" style="background-color:#ff8a8a; cursor: default">
-                                                                    @ev.Namn <span class="badge">Klar</span>
-                                                                </button>
-                                                            }
-                                                        }
-                                                    </div>
-                                                </td>
+                                                                if (ev.Påbörjad == true && ev.Utförd == false)
+                                                                {
+                                                                    // här ska den skicka till ett ställe där man kan avsluta uppgiften
+                                                                    <button class="btn btn-primary" type="button" style="background-color:#d46666" id="edit"
+                                                                            onclick="location.href='@Url.Action("Edit", "uppgifter", new { id = ev.UppgifterID, gruppnamn = Model.Item1.GruppNamn })'" title="@ev.UppgifterID">
+                                                                        @ev.Namn <span class="badge">Påbörjad</span>
+                                                                    </button>
+                                                                }
 
-                                                <td class="agenda-events" style="background-color:#e0e0e0">
-                                                    <div class="agenda-event">
-                                                        @if (ev.Ansvarig != null)
-                                                        {
-                                                            @ev.Ansvarig.HelaNamnet
-                                                        }
-                                                        else if (ev.Ansvarig == null)
-                                                        {
-                                                            <a>ingen har tagit på sig den här uppgiften än</a>
-                                                        }
-                                                    </div>
+                                                                else if (ev.Påbörjad == false && ev.Utförd == false)
+                                                                {
+                                                                    <button class="btn btn-primary" type="button" style="background-color:#c75151" id="edit"
+                                                                            onclick="location.href='@Url.Action("Edit", "uppgifter", new { id = ev.UppgifterID, gruppnamn = Model.Item1.GruppNamn })'" title="@ev.UppgifterID">
+                                                                        @ev.Namn <span class="badge">ej påbörjad</span>
+                                                                    </button>
+                                                                }
 
-                                            </tr>
-                                        </tbody>
+                                                                else if (ev.Utförd == true && ev.Påbörjad == true)
+                                                                {
+                                                                    <button class="btn btn-primary" type="button" style="background-color:#ff8a8a; cursor: default">
+                                                                        @ev.Namn <span class="badge">Klar</span>
+                                                                    </button>
+                                                                }
+
+                                                            }
+                                                            else if (ev.Ansvarig != null && ev.Ansvarig.AnvändarID != Convert.ToInt32(Session["AnvändarID"]))
+                                                            {
+                                                                if (ev.Påbörjad == true && ev.Utförd == false)
+                                                                {
+                                                                    <button class="btn btn-primary" type="button" style="background-color:#d46666; cursor: default" id="edit">
+                                                                        @ev.Namn <span class="badge">Påbörjad</span>
+                                                                    </button>
+                                                                }
+                                                                else if (ev.Påbörjad == false && ev.Utförd == false)
+                                                                {
+                                                                    <button class="btn btn-primary" type="button" style="background-color:#c75151; cursor: default" id="edit">
+                                                                        @ev.Namn <span class="badge">ej påbörjad</span>
+                                                                    </button>
+                                                                }
+                                                                else if (ev.Utförd == true && ev.Påbörjad == true)
+                                                                {
+                                                                    <button class="btn btn-primary" type="button" style="background-color:#ff8a8a; cursor: default">
+                                                                        @ev.Namn <span class="badge">Klar</span>
+                                                                    </button>
+                                                                }
+                                                            }
+                                                        </div>
+                                                    </td>
+                                                    <td class="agenda-events" style="background-color:#e0e0e0">
+                                                        <div class="agenda-event">
+                                                            @if (ev.Ansvarig != null)
+                                                            {
+                                                                @ev.Ansvarig.HelaNamnet
+                                                            }
+                                                            else if (ev.Ansvarig == null)
+                                                            {
+
+                                                                <a>ingen har tagit på sig den här uppgiften än</a>
+                                                            }
+                                                        </div>
+                                                    </td>
+                                                    <td class="agenda-events" style="background-color:#e0e0e0">
+                                                        <div class="agenda-event">
+
+                                                            @if (Convert.ToInt32(Session["AnvändarID"]) == Model.Item1.LedareID)
+                                                            {
+                                                                if (ev.Utförd == true)
+                                                                {
+                                                                    <button class="btn btn-primary" type="button" style="background-color:black" id="edit"
+                                                                            onclick="location.href='@Url.Action("tabortfrånlista", "uppgifter", new { id = ev.UppgifterID, grupp = ev.TillhörGrupp.GruppID })'" title="@ev.UppgifterID">
+                                                                        Ta bort <span class="badge">Påbörjad</span>
+                                                                    </button>
+                                                                }
+                                                            }
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        }
                                     }
 
                                 </table>
