--- a/Systemet/Views/Evenemangs/evenemangssida.cshtml
+++ b/Systemet/Views/Evenemangs/evenemangssida.cshtml
@@ -46,13 +46,17 @@
             <!-- Tab panes -->
             <div class="tab-content">
                 <!-- Pane comments -->
-                <div class="tab-pane active animated fadeInRight" id="comments">
+                <div class="tab-pane active fadeInRight" id="comments">
                     <!-- Begin scroll wrappper -->
-                    <div class="slimScrollDiv">
-                        <div class="scroll-widget">
+                    @*<div class="slimScrollDiv">*@
+                        @*<div class="scroll-widget">*@
                             <ul class="media-list">
 
-                                @foreach (var item in Model.Item2)
+                                @{ 
+                                    var sortkommentarer = Model.Item2.OrderByDescending(m => m.TidenFörKommentaren);
+                                }
+
+                                @foreach (var item in sortkommentarer)
                                 {
                                     <li class="media">
                                         <a class="pull-left" href="#fakelink">
@@ -60,20 +64,26 @@
                                            
                                         </a>
                                         <div class="media-body">
+                                            @if (item.kommentator.AnvändarID == Convert.ToInt32(Session["AnvändarID"]))
+                                            {
+                                                <button class="btn btn-xs pull-right" type="button" style="background-color:#d46666; font-size:x-small" id="tabortknapp" onclick="location.href='@Url.Action("TaBort", "EvenemangsKommentarers", new { id = item.EvenemangsKommentarerID, eid = Model.Item1.EvenemangID })'">x</button>
+                                            }
                                             <h4 class="media-heading" style="cursor: default"><a>@item.kommentator.HelaNamnet</a> <small>@item.TidenFörKommentaren.ToShortTimeString()</small></h4>
                                             <p>@item.Text</p>
+
+                                            
                                         </div>
                                     </li>
                                 }
                             </ul>
 
-                        </div>
-                    <div class="slimScrollBar"></div><div class="slimScrollRail"></div>
+                        @*</div>*@
+                    @*<div class="slimScrollBar"></div><div class="slimScrollRail"></div>*@
 
-                    </div><!-- End div .scroll-widget -->
+                    @*</div>*@<!-- End div .scroll-widget -->
 
                     <div class="box-footer">
-                        <p><a href="#fakelink"><i class="fa fa-share"></i> Se alla kommentarer</a></p>
+                        
                     </div>
                 </div><!-- End div .tab-pane -->
             </div><!-- End div .tab-content -->
@@ -82,13 +92,12 @@
     </div>
 </div>
 @if (Model.Item1.grupp.LedareID == Convert.ToInt32(Session["AnvändarID"]))
-    {
-<button class="btn btn-primary" type="button" style="background-color:black" id="delete"
-        onclick="location.href='@Url.Action("DeleteConfirmed", "Evenemangs", new { id = Model.Item1.EvenemangID })'" title="">
-    Radera evenemanget
-</button>
-    }
-
+{
+    <button class="btn btn-primary" type="button" style="background-color:black" id="delete"
+            onclick="location.href='@Url.Action("DeleteConfirmed", "Evenemangs", new { id = Model.Item1.EvenemangID })'" title="">
+        Radera evenemanget
+    </button>
+}
 
 
 @* Create a link that calls the controller method that returns the partial view*@
