--- a/Systemet/Views/Konto/Login.cshtml
+++ b/Systemet/Views/Konto/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Login</h2>
+<h2>Logga in</h2>
 
 
 @using (Html.BeginForm()) 
@@ -44,10 +44,6 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
