--- a/Systemet/Views/Shared/loggaIn.cshtml
+++ b/Systemet/Views/Shared/loggaIn.cshtml
@@ -24,7 +24,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Registrera", "Register", "Konto", routeValues: new { area = "" }, htmlAttributes: new { id = "registerLink", @class = "navbar-brand" })</li>
-        <li>@Html.ActionLink("Logga in", "Login", "Konto", routeValues: new { area = "" }, htmlAttributes: new { id = "loginLink", @class = "navbar-brand" })</li>
+        @*<li>@Html.ActionLink("Registrera", "Register", "Konto", routeValues: new { area = "" }, htmlAttributes: new { id = "registerLink", @class = "navbar-brand" })</li>
+        <li>@Html.ActionLink("Logga in", "Login", "Konto", routeValues: new { area = "" }, htmlAttributes: new { id = "loginLink", @class = "navbar-brand" })</li>*@
     </ul>
 }
