--- a/Systemet/Views/Grupp/Create.cshtml
+++ b/Systemet/Views/Grupp/Create.cshtml
@@ -11,7 +11,7 @@
 </ol>
 
 
-<h2>Create</h2>
+<h2>Skapa ny grupp</h2>
 
 
 @using (Html.BeginForm()) 
@@ -48,9 +48,6 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
