--- a/Systemet/Views/Home/Index.cshtml
+++ b/Systemet/Views/Home/Index.cshtml
@@ -1,32 +1,51 @@
-﻿@{
+﻿@{@model Systemet.Models.AnvändarKonton
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    @if (ViewBag.Message != null)
-    {
-        <p>@ViewBag.Message</p>
-    }
+
+       @using (Html.BeginForm())
+       {
+        @Html.AntiForgeryToken()
+
+        <div class="form-horizontal">            
+            <div class="page-header">
+                <h1 class="display-3">Välkommen</h1>
+            </div>
+            <hr/>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="logga in" class="btn btn-default"/>
+
+                    <button class="btn btn-default" type="button" style="background-color:white; color:black" id="delete"
+                            onclick="location.href='@Url.Action("Register", "Konto", null)'" title="Registrera">
+                            Registrera
+                    </button>
+                </div>                                                  
+            </div>
+        </div>
+       }
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
