--- a/Systemet/Views/Konto/Register.cshtml
+++ b/Systemet/Views/Konto/Register.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewBag.Title = "Register";
 }
-
+<ol class="breadcrumb">
+    <li>@Html.ActionLink("Startsidan", "Index", "Home")</li>
+    
+    <li class="active">Registrera</li>
+</ol>
 <h2>Register</h2>
 
 
@@ -65,15 +69,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Spara" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
